Fixed .alignleft for extra margin

--- a/style.css
+++ b/style.css
@@ -338,7 +338,7 @@ a:active {
 .alignleft {
 	display: inline;
 	float: left;
-	margin-left: -0.5em;
+	margin-left: -1em;
 	margin-right: 1.5em;
 }
 .alignright {
